--- a/Art.html
+++ b/Art.html
@@ -11,7 +11,7 @@
 
   <h3>Watercolors</h3>
   <img src="images\Art\Chico.jpg" alt="watercolor of cat Chico" height=250>
-  <img src="images\Art\fera.jpg" alt="watercolor of cat Fera" height=250>
+  <img src="images\Art\Fera.jpg" alt="watercolor of cat Fera" height=250>
   <img src="images\Art\Judy Clementine.jpg" alt="watercolor of cat Judy Clementine" height=250>
   <img src="images\Art\love cats.jpg" alt="watercolor of two cats with intertwined tails in the shape of a heart" height=250>
   <img src="images\Art\z3.jpg" alt="watercolor of a landscape" height=250>
