--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
   <h3>Hobbies</h3>
   <ul>
-    <li><a href="Opera.html" target="_blank">Music</a>, <a href="art.html" target="_blank">Art</a>, and Nature</li>
+    <li><a href="Opera.html" target="_blank">Music</a>, <a href="Art.html" target="_blank">Art</a>, and Nature</li>
     <li>Walking, hiking, running, pilates</li>
     <li>Reading</li>
     <li><a href="handwork.html" target="_blank">Crochet & Knitting</a></li>
