--- a/Art.html
+++ b/Art.html
@@ -19,7 +19,7 @@
   <img src="images\Art\Ophelia & Rocky.jpg" alt="watercolor of two siamese cats" height=250>
   <img src="images\Art\z1.jpg" alt="watercolor of a landscape" height=250>
 
-  <h3>Charcole Drawings</h3>
+  <h3>Charcoal Drawings</h3>
   <img src="images\Art\sister 1.jpg" alt="charcoal portrait of woman in sunglasses" height=250>
   <img src="images\Art\sister 2.jpg" alt="charcoal portrait of woman traveling with dog" height=250>
 
