--- a/handwork.html
+++ b/handwork.html
@@ -21,8 +21,8 @@
   <img src="images\Handwork\Rust shawl 2.jpg" alt="second view of crocheted shawl in rust color" height=250>
   <img src="images\Handwork\yellow scarf.jpg" alt="mustard colored crocheted scarf with delicate lacework" height=250>
   <img src="images\Handwork\yellow scarf 2.jpg" alt="second view of mustard colored crocheted scarf with delicate lacework" height=250>
-  <img src="images\Handwork\Ducks.jpg" alt="Ducky baby blanket, yellow" height=250>
-  <img src="images\Handwork\Cthulhu baby.jpg" alt="Cthulhu baby blanket, mint" height=250>
+  <img src="images\Handwork\ducks.jpg" alt="Ducky baby blanket, yellow" height=250>
+  <img src="images\Handwork\cthulhu baby.jpg" alt="Cthulhu baby blanket, mint" height=250>
   <img src="images\Handwork\flame shawl.jpg" alt="crocheted shawl in in flamey colors" height=250>
   <img src="images\Handwork\purple navy shawl.jpg" alt="crocheted shawl in purple-navy ombre" height=250>
 
